<resources>
    <string name="app_name">Calorimetro</string>

    <!-- home -->
    <string name="app_title">Calorímetro</string>
    <string name="btnProfile">Boton perfil</string>
    <string name="btnNotifications">Boton notificaciones</string>
    <string name="fire_icon">Icono de fuego</string>
    <string name="act_calories">1721 Kcal</string>
    <string name="title_details">Detalles</string>
    <string name="details">Ir a detalles</string>

    <!-- actividad fisica -->
    <string name="act_fisica">Actividad física</string>
    <string name="add_act_fisica">Agregar actividad física</string>
    <string name="btnBack">Botón de regreso</string>
    <string name="btnAdd">Botón de agregar</string>

    <!-- Comidas -->
    <string name="comidas">Reporte de comidas</string>

    <!-- Registro-->
    <string-array name="genero_options">
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>

    <string-array name="niv_fisico_options">
        <item>Sedentario (poco o ningún ejercicio)</item>
        <item>Ligero (1-3 días por semana)</item>
        <item>Moderado (3-5 días por semana)</item>
        <item>Fuerte (6-7 días por semana)</item>
        <item>Muy fuerte (2 veces al día)</item>
    </string-array>

    <string-array name="objetivo_options">
        <item>Ganar peso</item>
        <item>Perder peso</item>
        <item>Mantener peso</item>
    </string-array>
</resources>